--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Drum Kit</title>
-  <link rel="stylesheet" href="C:\Users\16466\Downloads\Drum Kit Starting Files (1)\Drum Kit Starting Files\styles.css">
+  <!-- <link rel="stylesheet" href="C:\Users\16466\Downloads\Drum Kit Starting Files (1)\Drum Kit Starting Files\styles.css"> -->
+  <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
 </head>
 
