--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
   <footer>
     Made with ❤️ in USA.
   </footer>
-<script src="C:\Users\16466\Downloads\Drum Kit Starting Files (1)\Drum Kit Starting Files\index.js" charset="utf-8"></script>
+<!-- <script src="C:\Users\16466\Downloads\Drum Kit Starting Files (1)\Drum Kit Starting Files\index.js" charset="utf-8"></script> -->
+  <script src="index.js" charset="utf-8"></script>
 </body>
 
 </html>
