--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
   <footer>
-    Made with ❤️ in USA.
+    Made with ❤️ in Juliet's house.
   </footer>
 <!-- <script src="C:\Users\16466\Downloads\Drum Kit Starting Files (1)\Drum Kit Starting Files\index.js" charset="utf-8"></script> -->
   <script src="index.js" charset="utf-8"></script>
